--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,13 @@
+/node_modules
+/public/hot
+/public/storage
+/storage/*.key
 /vendor
-.php_cs_cache
+/.idea
+/.vscode
+/.vagrant
+Homestead.json
+Homestead.yaml
+npm-debug.log
+yarn-error.log
+.env
